# ShellQL

./: .env.test  .gitignore  CONTRIBUTING.md  Cargo.toml  Issues.md  LICENSE  README.md  Untitled  documentation.md
.github/workflows/: ci.yml  homebrew-tap-sync.yml  publish-crates.yml  release.yml
Docs/: documentation.md
docs/: homebrew.md
scripts/: bump-beta.sh
src/: cli.rs  lib.rs  main.rs  prompt.rs
src/cli/: commands.rs  input_handle.rs  mod.rs  prompt.rs
src/connection/: connect.rs  error.rs  mod.rs  models.rs  pool.rs  query.rs  store.rs
src/connection/sql/: crud.rs  mod.rs  read.rs  schema.rs
src/tui/: app.rs  controls.rs  mod.rs  render.rs
src/tui/controls/: cmdline.rs  dashboard.rs  form.rs  home.rs  mod.rs  ops.rs  overlay.rs
src/tui/controls/cmdline/: data.rs  mod.rs  nav.rs  pane.rs  search.rs  sql.rs  tab.rs
src/tui/controls/dashboard/: editor.rs  helpers.rs  info.rs  mod.rs  modes.rs  navigation.rs  search.rs
src/tui/state/: app.rs  cmdline.rs  dashboard.rs  data.rs  editor.rs  form.rs  mod.rs  pane.rs  pane_layout.rs  session.rs  tab.rs  table.rs
src/tui/ui/: mod.rs
src/tui/ui/cmdline/: mod.rs
src/tui/ui/components/: centered_rect.rs  cmdline.rs  mod.rs
src/tui/ui/components/cmdline/: cell_edit.rs  completions.rs  confirm.rs  idle.rs  input.rs  mod.rs  search.rs
src/tui/ui/dashboard/: mod.rs  panes.rs  sql_highlight.rs
src/tui/ui/dashboard/panes/: mod.rs  query_editor.rs  query_results.rs  schema_picker.rs  schema_view.rs  table_list.rs  table_view.rs
src/tui/ui/home/: mod.rs
src/tui/ui/home/overlays/: add_connection.rs  command_palette.rs  connection_picker.rs  help.rs  mod.rs
tests/: connections.rs  docker-compose.yml  sql_integration.rs  sql_prebuilt_queries_integration.rs  tui_state_cmdline.rs  tui_state_form.rs  tui_ui_cmdline.rs  tui_ui_home.rs  validation.rs
tests/docker/postgres/: init.sql
tests/docker/sqlite/: seed.sql
