[package]
name = "shellql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = {version = "4.6.1", features = ["derive"]}
console = "0.16.3"
crossterm = "0.29.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "sqlite", "runtime-tokio", "tls-native-tls"] }
tabled = "0.20.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5.8"

[dev-dependencies]
serial_test = "3"
