[package]
name = "shellql"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shql"
path = "src/main.rs"

[dependencies]
annotate-snippets = "0.12"
clap = {version = "4.6.1", features = ["derive"]}
color-eyre = { version = "0.6", default-features = false }
console = "0.16.3"
crossterm = "0.29.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
owo-colors = "4"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "sqlite", "runtime-tokio", "tls-native-tls"] }
tabled = "0.20.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
serial_test = "3"
